<resources>
    <string name="app_name">CapriPicnic</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="register_banner">Register banner</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sing_in">Sing in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Register">Register</string>
    <string name="new_user_sign_up">New user? SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="have_a_count_sign_in">Have a count? SIGN IN</string>
    <string name="do_you_accept_the_terms">Do you accept the terms?</string>
    <string name="name">Name</string>
    <string name="Welcome">Welcome</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="password_recovery">Password recovery</string>
    <string name="submit">SUBMIT</string>
</resources>