<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Icon-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/register_banner"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textFieldLoyout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/Password"
            android:textColorHint="@android:color/darker_gray"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot password -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_password"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"/>

        <!-- Sign in -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="30dp" />

        <!-- Sign up -->
        <TextView
            android:id="@+id/singUp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_user_sign_up"
            android:textColor="@android:color/white"
            android:textSize="21sp" />
    </LinearLayout>
</RelativeLayout>