<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="UselessParent">

        <!-- Icono -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/register_banner" />

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRegister_textFieldLoyout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/name"
            android:textColorHint="@android:color/darker_gray"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegister_textFieldLoyout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Password"
            android:textColorHint="@android:color/darker_gray"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password verify -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordVerifiedRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_password_again"
            android:textColorHint="@android:color/darker_gray"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordVerifiedRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Terms accept -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:padding="0dp"
            android:layout_marginEnd="0dp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/termsRegister_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_accept_the_terms"
                android:textColor="@android:color/white"/>
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/acceptTermsRegister_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginStart="2dp"
                android:enabled="false"
                android:clickable="false"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Register -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/Register"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="30dp" />

        <!-- SIGN IN -->
        <TextView
            android:id="@+id/singInRegister_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/have_a_count_sign_in"
            android:textColor="@android:color/white"
            android:textSize="21sp" />
    </LinearLayout>
</RelativeLayout>