<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Welcome -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/password_recovery"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRecovery_textFieldLoyout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:background="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRecovery_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                android:background="@android:color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="30dp" />
    </LinearLayout>
</RelativeLayout>